--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node_1": "nodemon --watch dev -e js server/networkNode.js 3001 http://localhost:3001",
+    "node_2": "nodemon --watch dev -e js server/networkNode.js 3002 http://localhost:3002",
+    "node_3": "nodemon --watch dev -e js server/networkNode.js 3003 http://localhost:3003",
+    "node_4": "nodemon --watch dev -e js server/networkNode.js 3004 http://localhost:3004",
+    "node_5": "nodemon --watch dev -e js server/networkNode.js 3005 http://localhost:3005"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +17,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
-    "sha256": "^0.2.0"
+    "request": "^2.88.0",
+    "rp": "^0.2.0",
+    "sha256": "^0.2.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
