--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "welead",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "node.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node_1": "nodemon --watch dev -e js server/networkNode.js 3001 http://localhost:3001",
-    "node_2": "nodemon --watch dev -e js server/networkNode.js 3002 http://localhost:3002",
-    "node_3": "nodemon --watch dev -e js server/networkNode.js 3003 http://localhost:3003",
-    "node_4": "nodemon --watch dev -e js server/networkNode.js 3004 http://localhost:3004",
-    "node_5": "nodemon --watch dev -e js server/networkNode.js 3005 http://localhost:3005"
+    "node_1": "nodemon --watch dev -e js node.js 8001 http://localhost:8001",
+    "node_2": "nodemon --watch dev -e js node.js 8002 http://localhost:8002",
+    "node_3": "nodemon --watch dev -e js node.js 8003 http://localhost:8003",
+    "node_4": "nodemon --watch dev -e js node.js 8004 http://localhost:8004",
+    "node_5": "nodemon --watch dev -e js node.js 8005 http://localhost:8005"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "request": "^2.88.0",
+    "request-promise": "^4.2.2",
     "rp": "^0.2.0",
     "sha256": "^0.2.0",
     "uuid": "^3.3.2"
