--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
+    "mongoose": "^5.2.9",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rp": "^0.2.0",
