--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "mongoose": "^5.2.9",
+    "monkeylearn": "^3.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
     "rp": "^0.2.0",
     "sha256": "^0.2.0",
+    "unirest": "^0.5.1",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
